--- a/src/assets/css/portal.css
+++ b/src/assets/css/portal.css
@@ -210,7 +210,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/../portal/src/assets/images/image.png') center/cover no-repeat;
+    background: url('../images/image.png') center/cover no-repeat;
     z-index: 0;
   }
   
